Desktop icon not showing -fixed

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav{
     padding: 0 24px;
 }
 
-nav img{
+.navigation img{
     display: none;
 }
 
